[WIP] fix notebook stetics

--- a/notebooks/prices_poc_prediction.ipynb
+++ b/notebooks/prices_poc_prediction.ipynb
@@ -1237,6 +1237,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28486261-881d-47c2-8495-2108768a4407",
+   "metadata": {},
+   "source": [
+    "1. Get Model 1 (Deterministic Model) inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "d31c43f2-6d61-48b8-aa01-31957a5b437e",
@@ -1244,6 +1252,14 @@
    "outputs": [],
    "source": [
     "X_1, X_fore_1 = uts.get_X_det(y, forecast_steps = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c17dde6a-27c5-4458-99bb-6a27b586e846",
+   "metadata": {},
+   "source": [
+    "2. Fit Model 1 and retrieve model, fitted values and residuals"
    ]
   },
   {
@@ -1257,6 +1273,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f547a11d-bb4c-4f5e-a6fd-321e3345158f",
+   "metadata": {},
+   "source": [
+    "3. Get Model 2 (Residual Model) inputs "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "50079f98-bb8a-4e1b-9bb8-e74d4acc4c6b",
@@ -1264,6 +1288,14 @@
    "outputs": [],
    "source": [
     "y_2, X_fore_2, X_2 = uts.get_X_res(residuals, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba3a923-e3ba-463b-8f9f-c69abf1797a6",
+   "metadata": {},
+   "source": [
+    "4. Fit Model 2 and retrieve model, fitted values and residuals"
    ]
   },
   {
@@ -1277,6 +1309,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d104d8e-718c-4f5e-86a5-63bc55c9ed57",
+   "metadata": {},
+   "source": [
+    "5. Get Final Model (Model 1 + Model 2) fitted values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "2dcfc84d-f942-4563-af95-10daa6310a47",
@@ -1287,6 +1327,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76eb3fa5-ed7e-4d7c-8b12-a83ff7001a34",
+   "metadata": {},
+   "source": [
+    "6. Compute Final Model Residuals"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "c4a05a25-213e-49ee-bd81-acf07f36f922",
@@ -1294,6 +1342,14 @@
    "outputs": [],
    "source": [
     "res_std = (y - y_pred).dropna().std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b307b996-6a1e-469e-a1b3-ac6f82473caf",
+   "metadata": {},
+   "source": [
+    "7. Get 1-step ahead prediction"
    ]
   },
   {
@@ -1308,26 +1364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "f9dce068-96c1-44b9-8d62-e3945056d33a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'point': 8217.77121365658,\n",
-       " 'lower': 7909.126234358783,\n",
-       " 'upper': 8526.416192954377,\n",
-       " 'index': Timestamp('2022-12-01 00:00:00', freq='MS')}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'point': 8217.77121365658, 'lower': 7909.126234358783, 'upper': 8526.416192954377, 'index': Timestamp('2022-12-01 00:00:00', freq='MS')}\n"
+     ]
     }
    ],
    "source": [
-    "prediction"
+    "print(prediction)"
    ]
   },
   {
