[WIP] multiple series forecast

--- a/notebooks/prices_poc_prediction.ipynb
+++ b/notebooks/prices_poc_prediction.ipynb
@@ -5,7 +5,7 @@
    "id": "e86315a3-f665-4402-b4fa-a888a11c4524",
    "metadata": {},
    "source": [
-    "## Historical Price Data EDA"
+    "## TS Forecast Proof of Concept"
    ]
   },
   {
