--- a/notebooks/prices_poc_prediction.ipynb
+++ b/notebooks/prices_poc_prediction.ipynb
@@ -31,8 +31,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set_palette('colorblind')\n",
-    "from conf import settings as sts\n",
-    "from conf import utils as uts\n",
+    "from app.conf import settings as sts\n",
+    "from app.conf import utils as uts\n",
     "import re\n",
     "import string\n",
     "from statsmodels.tsa.deterministic import DeterministicProcess, CalendarFourier\n",
